	put format opening in a separate subsection, begin_format, to be
	able to open a menu_comment right after a beginning of a menu, of
	a detailmenu, or right after the end of those commands.
	add command line option --error-limit.
	* texi2html.pl: better comment about texi2html that states more 
	clearly that the authors are the texi2html authors (from Reinhold
	Kainhofer).

2008-07-19  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, doc/*: synchronize command-line switches with 
	makeinfo.
	* i18n/fr, Tests/*: revised french translation from Jean-Charles
	Malahieude.

2008-07-18  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: get rid of m_cedilla, instead a specific function
	for the node parsing, scan_node_line, is used.
	* Tests/formatting/detailmenus.texi: new test case for detailmenu.

2008-07-16  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: give columnfractions and row
	prototypes to the multitable cell and row formatting functions.
	* texi2html.init: use columnfractions to determine the cell
	widths.

2008-06-12  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: dynamically determine file hrefs for
	misc elements. Generalize code common for all misc elements. 
	In toc and footnotes use real filenames instead of empty filenames 
	when not split.
	monolithic option is not obsolete and does something different from 
	no split (toc, about... are in different files if set to no).
	Code cleanups in rearrange_elements.
	* Tests/*: add a test for -no-monolithic.
	* */Makefile.in: use autoconf 2.62

2008-05-18  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: complete unicode mapping for @-commands.
	* texi2html.pl, Tests/*, doc/*: separate id of element from what
	should be used to target the element. This allows to 
	use node id as target for sections (suggestion from Karl Berry). 
	This is done if $USE_NODE_TARGET is set (the default).

2008-05-16  Patrice Dumas  <dumas@centre-cired.fr>